Bug #40653 Numerous doxygen errors and warnings in backup code
Submitted: 11 Nov 2008 22:10 Modified: 10 Feb 2009 21:15
Reporter: Chuck Bell Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Backup Severity:S3 (Non-critical)
Version:6.0.8 OS:Any
Assigned to: Chuck Bell CPU Architecture:Any

[11 Nov 2008 22:10] Chuck Bell
Description:
The backup code in ./sql/backup contains numerous (about 260) doxygen errors and warnings. See file attached.

How to repeat:
run doxygen in ./sql/backup

Suggested fix:
Fix errors and warnings.
[11 Nov 2008 22:14] Chuck Bell
List of all doxygen errors and warnings in backup code.

Attachment: doxygen-warnings.txt (text/plain), 42.31 KiB.

[20 Nov 2008 11:30] Susanne Ebrecht
Verified by given description
[12 Dec 2008 19:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/61542

2736 Chuck Bell	2008-12-12
      BUG#40653 Numerous doxygen errors and warnings in backup code 
      
      This patch corrects a large number of doxygen errors and warnings. 
      The type of things changed include (but no logic changes)
      * documentation of attributes, typedefs, constants
      * corrected documentation of methods
      * code alignment issues (where appropriate)
      * change of /** to ///< for uniformity
[15 Dec 2008 14:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/61676

2735 Chuck Bell	2008-12-15
      BUG#40653 Numerous doxygen errors and warnings in backup code 
      
      This patch corrects a large number of doxygen errors and warnings. 
      The type of things changed include (but no logic changes)
      * documentation of attributes, typedefs, constants
      * corrected documentation of methods
      * code alignment issues (where appropriate)
      * change of /** to ///< for uniformity
[16 Dec 2008 10:32] Jørgen Løland
Good to push
[18 Dec 2008 14:42] Øystein Grøvlen
Good to push.
[18 Dec 2008 21:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/62016

2742 Chuck Bell	2008-12-18
      BUG#40653 Numerous doxygen errors and warnings in backup code 
      
      This patch corrects a large number of doxygen errors and warnings. 
      The type of things changed include (but no logic changes)
      * documentation of attributes, typedefs, constants
      * corrected documentation of methods
      * code alignment issues (where appropriate)
      * change of /** to ///< for uniformity
[2 Feb 2009 16:07] Bugs System
Pushed into 6.0.10-alpha (revid:sergefp@mysql.com-20090202090240-dlkxhmc1asrar5rl) (version source revid:sergefp@mysql.com-20090129100938-qvke7a9krg24l8pl) (merge vers: 6.0.10-alpha) (pib:6)
[10 Feb 2009 21:15] Paul DuBois
Cosmetic changes. No changelog entry needed.