BUG#40653 Numerous doxygen errors and warnings in backup code

This patch corrects a large number of doxygen errors and warnings. 
The type of things changed include (but no logic changes)
* documentation of attributes, typedefs, constants
* corrected documentation of methods
* code alignment issues (where appropriate)
* change of /** to ///< for uniformity